feat: migrate device-plugins and k8s-ecr-login-renew into kubezero-addons

--- a/charts/kubezero-addons/templates/device-plugins/fuse-device-plugin.yaml
+++ b/charts/kubezero-addons/templates/device-plugins/fuse-device-plugin.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.fuseDevicePlugin.enabled }}
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -28,3 +29,4 @@ spec:
         - name: device-plugin
           hostPath:
             path: /var/lib/kubelet/device-plugins
+{{- end }}
