--- a/charts/kubezero-addons/templates/k8s-ecr-login-renew/cronjob.yaml
+++ b/charts/kubezero-addons/templates/k8s-ecr-login-renew/cronjob.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.k8sEcrLoginRenew.enabled }}
 apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
@@ -38,3 +39,4 @@ spec:
                     secretKeyRef:
                       name: ecr-renew-cred
                       key: AWS_SECRET_ACCESS_KEY
+{{- end }}
