--- a/charts/kubezero-addons/templates/k8s-ecr-login-renew/service-account.yml
+++ b/charts/kubezero-addons/templates/k8s-ecr-login-renew/service-account.yml
@@ -1,9 +1,11 @@
+{{- if .Values.k8sEcrLoginRenew.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   namespace: kube-system
   name: ecr-renew
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -16,6 +18,7 @@ rules:
     resources: ["namespaces"]
     verbs: ["get", "list"]
 ---
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -29,3 +32,4 @@ subjects:
   - kind: ServiceAccount
     name: ecr-renew
     namespace: kube-system
+{{- end }}
