--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -45,9 +45,8 @@ kibana:
 fluentd:
   enabled: false
   image:
-    repository: fluent/fluentd-kubernetes-daemonset
-    # tag: v1-debian-elasticsearch
-    tag: v1.11.1-debian-elasticsearch7-1.3
+    repository: public.ecr.aws/zero-downtime/fluentd-concenter
+    tag: v1.14.1
   istio:
     enabled: false
 
@@ -123,7 +122,7 @@ fluentd:
   fileConfigs:
     00_system.conf: |-
       <system>
-        root_dir /var/log/fluentd
+        root_dir /fluentd/log
         log_level info
         ignore_repeated_log_interval 60s
         ignore_same_log_interval 60s
@@ -189,8 +188,10 @@ fluentd:
           @type elasticsearch
           # @log_level debug
           include_tag_key true
+
           id_key _hash
           remove_keys _hash
+          write_operation create
 
           # KubeZero pipeline incl. GeoIP etc.
           pipeline fluentd
@@ -205,24 +206,29 @@ fluentd:
           logstash_format true
           reconnect_on_error true
           reload_on_failure true
-          request_timeout 60s
-          suppress_type_name true
+          request_timeout 300s
           slow_flush_log_threshold 55.0
+
+          #with_transporter_log true
+
+          verify_es_version_at_startup false
+          default_elasticsearch_version 7
+          suppress_type_name true
 
           # Retry failed bulk requests
           # https://github.com/uken/fluent-plugin-elasticsearch#unrecoverable-error-types
           unrecoverable_error_types ["out_of_memory_error"]
-          bulk_message_request_threshold 2097152
+          bulk_message_request_threshold 1048576
 
           <buffer>
             @type file
 
             flush_mode interval
             flush_thread_count 2
-            flush_interval 30s
+            flush_interval 10s
 
-            chunk_limit_size 4MB
-            total_limit_size 2GB
+            chunk_limit_size 2MB
+            total_limit_size 1GB
 
             flush_at_shutdown true
             retry_type exponential_backoff
