--- a/charts/kubezero-istio-ingress/templates/envoyfilter-keepalive-nlb.yaml
+++ b/charts/kubezero-istio-ingress/templates/envoyfilter-keepalive-nlb.yaml
@@ -16,23 +16,18 @@ spec:
       operation: MERGE
       value:
         socket_options:
-          # SOL_SOCKET = 1
-          # SO_KEEPALIVE = 9
-          - level: 1
-            name: 9
+          - level: 1 # SOL_SOCKET = 1
+            name: 9 # SO_KEEPALIVE = 9
             int_value: 1
-            state: STATE_LISTENING
-          # IPPROTO_TCP = 6
-          # TCP_KEEPIDLE = 4
-          - level: 6
-            name: 4
+            state: STATE_PREBIND
+          - level: 6 # IPPROTO_TCP = 6
+            name: 4 # TCP_KEEPIDLE = 4
             int_value: 120
-            state: STATE_LISTENING
-          # TCP_KEEPINTVL = 5
-          - level: 6
-            name: 5
+            state: STATE_PREBIND
+          - level: 6 # IPPROTO_TCP = 6
+            name: 5 # TCP_KEEPINTVL = 5
             int_value: 60
-            state: STATE_LISTENING
+            state: STATE_PREBIND
 {{- end }}
 
 {{- if index .Values "istio-private-ingress" "enabled" }}
@@ -54,21 +49,16 @@ spec:
       operation: MERGE
       value:
         socket_options:
-          # SOL_SOCKET = 1
-          # SO_KEEPALIVE = 9
-          - level: 1
-            name: 9
+          - level: 1 # SOL_SOCKET = 1
+            name: 9 # SO_KEEPALIVE = 9
             int_value: 1
-            state: STATE_LISTENING
-          # IPPROTO_TCP = 6
-          # TCP_KEEPIDLE = 4
-          - level: 6
-            name: 4
+            state: STATE_PREBIND
+          - level: 6 # IPPROTO_TCP = 6
+            name: 4 # TCP_KEEPIDLE = 4
             int_value: 120
-            state: STATE_LISTENING
-          # TCP_KEEPINTVL = 5
-          - level: 6
-            name: 5
+            state: STATE_PREBIND
+          - level: 6 # IPPROTO_TCP = 6
+            name: 5 # TCP_KEEPINTVL = 5
             int_value: 60
-            state: STATE_LISTENING
+            state: STATE_PREBIND
 {{- end }}
