--- a/charts/kubezero-storage/Chart.yaml
+++ b/charts/kubezero-storage/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-storage
 description: KubeZero umbrella chart for all things storage incl. backup, eg. openEBS-lvm, gemini
 type: application
-version: 0.3.1
+version: 0.3.2
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -15,8 +15,8 @@ maintainers:
 dependencies:
   - name: lvm-localpv
     version: 0.8.2
-    repository: https://openebs.github.io/lvm-localpv
     condition: lvm-localpv.enabled
+    # repository: https://openebs.github.io/lvm-localpv
   - name: gemini
     version: 0.0.7
     condition: gemini.enabled
