--- a/charts/kubezero-cert-manager/values.yaml
+++ b/charts/kubezero-cert-manager/values.yaml
@@ -78,4 +78,8 @@ cert-manager:
   prometheus:
     servicemonitor:
       enabled: false
+
   # cert-manager.podAnnotations -- "iam.amazonaws.com/roleIAM:" role ARN the cert-manager might use via kiam eg."arn:aws:iam::123456789012:role/certManagerRoleArn"
+
+  startupapicheck:
+    enabled: false
