--- a/charts/kubezero-metrics/configs/metrics-dashboards.yaml
+++ b/charts/kubezero-metrics/configs/metrics-dashboards.yaml
@@ -1,6 +1,6 @@
 configmap: grafana-dashboards-metrics
 gzip: true
-folder: Metrics
+folder: KubeZero
 dashboards:
 - name: AlertManager
   url: https://grafana.com/api/dashboards/9578/revisions/4/download
