--- a/charts/kubezero-argocd/values.yaml
+++ b/charts/kubezero-argocd/values.yaml
@@ -19,6 +19,10 @@ argo-cd:
     image:
       tag: v2.1.3
 
+  configs:
+    secret:
+      createSecret: false
+
   controller:
     args:
       statusProcessors: "8"
@@ -49,8 +53,8 @@ argo-cd:
   server:
     logFormat: json
     config:
-      ui.bannercontent: "KubeZero Release 2.20 incl. ArgoCD 2.0 -> Release notes"
-      ui.bannerurl: "https://blog.argoproj.io/argo-cd-v2-0-rc1-is-here-f7d21ff1aa64"
+      ui.bannercontent: "KubeZero Release 1.20.8-12 incl. ArgoCD 2.1 -> Release notes"
+      ui.bannerurl: "https://blog.argoproj.io/argo-cd-v2-1-first-release-candidate-is-ready-c1aab7795638"
 
       # argo-cd.server.config.url -- ArgoCD hostname to be exposed via Istio
       url: argocd.example.com
