feat: release kubezero 1.20-11 incl. various bare-metal fixes

--- a/charts/kubeadm/templates/InitConfiguration.yaml
+++ b/charts/kubeadm/templates/InitConfiguration.yaml
@@ -3,6 +3,7 @@ kind: InitConfiguration
 metadata:
   name: kubezero-initconfiguration
 localAPIEndpoint:
+  advertiseAddress: {{ .Values.listenAddress }}
   bindPort: {{ .Values.api.listenPort }}
 nodeRegistration:
   ignorePreflightErrors:
