--- a/charts/kubeadm/templates/ClusterConfiguration.yaml
+++ b/charts/kubeadm/templates/ClusterConfiguration.yaml
@@ -23,10 +23,12 @@ etcd:
       {{- end }}
     # These will only be used to create the etcd certs but removed for Init/Join kudeadm calls allowing us to sneak in aliases for etcd nodes
     serverCertSANs:
+    - "{{ .Values.listenAddress }}"
     - "{{ .Values.etcd.nodeName }}"
     - "{{ .Values.etcd.nodeName }}.{{ .Values.domain }}"
     - "{{ .Values.domain }}"
     peerCertSANs:
+    - "{{ .Values.listenAddress }}"
     - "{{ .Values.etcd.nodeName }}"
     - "{{ .Values.etcd.nodeName }}.{{ .Values.domain }}"
     - "{{ .Values.domain }}"
@@ -57,6 +59,7 @@ apiServer:
     audit-log-maxsize: "100"
     audit-log-maxbackup: "3"
     audit-log-compress: "true"
+    bind-address: {{ .Values.listenAddress }}
     tls-cipher-suites: "TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384"
     admission-control-config-file: /etc/kubernetes/apiserver/admission-configuration.yaml
     {{- if eq .Values.platform "aws" }}
