--- a/charts/kubeadm/templates/JoinConfiguration.yaml
+++ b/charts/kubeadm/templates/JoinConfiguration.yaml
@@ -18,3 +18,6 @@ nodeRegistration:
     {{- with .Values.providerID }}
     provider-id: {{ . }}
     {{- end }}
+    {{- if ne .Values.listenAddress "0.0.0.0" }}
+    node-ip: {{ .Values.listenAddress }}
+    {{- end }}
