--- a/charts/kubeadm/templates/resources/20-oicd-public-rbac.yaml
+++ b/charts/kubeadm/templates/resources/20-oicd-public-rbac.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.platform "aws" }}
+{{- if .Values.api.serviceAccountIssuer }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
