chore: some sensible defaults for goCD

--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -1,5 +1,11 @@
 gocd:
   enabled: false
 
+  server:
+    service:
+      type: "ClusterIP"
+    ingress:
+      enabled: false
+
 jenkins:
   enabled: false
