--- a/charts/kubezero-argocd/templates/istio-service.yaml
+++ b/charts/kubezero-argocd/templates/istio-service.yaml
@@ -3,6 +3,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: argocd-server
+  namespace: {{ $.Release.Namespace }}
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
