--- a/containers/admin/v1.21/kubeadm/templates/patches/coredns0.yaml
+++ b/containers/admin/v1.21/kubeadm/templates/patches/coredns0.yaml
@@ -11,7 +11,7 @@ spec:
           limits:
             memory: 128Mi
       nodeSelector:
-        node-role.kubernetes.io/master: ""
+        node-role.kubernetes.io/control-plane: ""
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
