--- a/containers/admin/v1.21/kubeadm/Chart.yaml
+++ b/containers/admin/v1.21/kubeadm/Chart.yaml
@@ -1,13 +1,14 @@
 apiVersion: v2
 name: kubeadm
-description: KubeZero Kubeadm golden config
+description: KubeZero Kubeadm cluster config
 type: application
-version: 1.20.11
+version: 1.21.7
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - kubeadm
 maintainers:
-  - name: Quarky9
-kubeVersion: ">= 1.18.0"
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
+kubeVersion: ">= 1.20.0"
