--- a/containers/admin/v1.21/kubeadm/templates/apiserver/aws-iam-authenticator.yaml
+++ b/containers/admin/v1.21/kubeadm/templates/apiserver/aws-iam-authenticator.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.platform "aws" }}
+{{- if .Values.api.awsIamAuth.enabled }}
 # clusters refers to the remote service.
 clusters:
   - name: aws-iam-authenticator
