--- a/containers/admin/v1.21/kubeadm/values.yaml
+++ b/containers/admin/v1.21/kubeadm/values.yaml
@@ -16,26 +16,40 @@ api:
   # -- s3://${CFN[ConfigBucket]}/k8s/$CLUSTERNAME
   oidcEndpoint: ""
   apiAudiences: "istio-ca"
-  awsIamAuth: "false"
+
+  awsIamAuth:
+    enabled: false
+    workerNodeRole: "arn:aws:iam::000000000000:role/KubernetesNode"
+    kubeAdminRole: "arn:aws:iam::000000000000:role/KubernetesNode"
+
+addons:
+  aws-node-termination-handler:
+    enabled: false
+    # -- arn:aws:sqs:${REGION}:${AWS_ACCOUNT_ID}:${CLUSTERNAME}_Nth
+    queueURL: ""
+
+  clusterBackup:
+    enabled: false
+    # -- s3:https://s3.amazonaws.com/${CFN[ConfigBucket]}/k8s/${CLUSTERNAME}/clusterBackup
+    repository: ""
+    # -- /etc/cloudbender/clusterBackup.passphrase
+    passwordFile: ""
+
+network:
+  multus:
+    enabled: false
+    tag: "v3.8"
+  cilium:
+    enabled: false
+  calico:
+    enabled: false
+
+highAvailable: false
 
 etcd:
   nodeName: set_via_cmdline
   extraArgs: {}
 
-backup:
-  # -- s3:https://s3.amazonaws.com/${CFN[ConfigBucket]}/k8s/${CLUSTERNAME}/clusterBackup
-  repository: ""
-  # -- /etc/cloudbender/clusterBackup.passphrase
-  passwordFile: ""
-
-highAvailable: false
-
-# -- supported values aws,bare-metal
-platform: "aws"
-
 # -- Set to false for openrc, eg. on Gentoo or Alpine
 systemd: true
 protectKernelDefaults: true
-
-workerNodeRole: "arn:aws:iam::000000000000:role/KubernetesNode"
-kubeAdminRole: "arn:aws:iam::000000000000:role/KubernetesNode"
