--- a/containers/admin/v1.21/kubeadm/templates/admin-aws-iam.yaml
+++ b/containers/admin/v1.21/kubeadm/templates/admin-aws-iam.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.platform "aws" }}
+{{- if .Values.api.awsIamAuth.enabled }}
 apiVersion: v1
 kind: Config
 clusters:
@@ -23,5 +23,5 @@ users:
         - "-i"
         - "{{ .Values.clusterName }}"
         - "-r"
-        - "{{ .Values.kubeAdminRole }}"
+        - "{{ .Values.api.awsIamAuth.kubeAdminRole }}"
 {{- end }}
