--- a/charts/kubezero-addons/Chart.yaml
+++ b/charts/kubezero-addons/Chart.yaml
@@ -2,19 +2,20 @@ apiVersion: v2
 name: kubezero-addons
 description: KubeZero umbrella chart for various optional cluster addons
 type: application
-version: 0.1.0
+version: 0.2.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - fuse-device-plugin
-  - metallb
   - k8s-ecr-login-renew
+  - aws-node-termination-handler
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
-  - name: metallb
-    version: 0.10.2
-    repository: https://metallb.github.io/metallb
-    condition: metallb.enabled
-kubeVersion: ">= 1.18.0"
+  - name: aws-node-termination-handler
+    version: 0.16.0
+    repository: https://aws.github.io/eks-charts
+    condition: aws-node-termination-handler.enabled
+kubeVersion: ">= 1.20.0"
