--- a/charts/kubezero/docs/applicationSet.yaml
+++ b/charts/kubezero/docs/applicationSet.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       project: kubezero
       source:
-        repoURL: https://zero-down-time.github.io/kubezero
+        repoURL: https://cdn.zero-downtime.net/charts
         chart: kubezero
         targetRevision: '{{ "{{" }} kubezero.version {{ "}}" }}'
         helm:
