--- a/charts/kubezero/Chart.yaml
+++ b/charts/kubezero/Chart.yaml
@@ -1,17 +1,18 @@
 apiVersion: v2
 name: kubezero
-description: KubeZero - Bootstrap and ArgoCD Root App of Apps chart
+description: KubeZero - Root App of Apps chart
 type: application
-version: 1.20.11-4
+version: 1.21.7-0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - argocd
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.4"
-    repository: https://zero-down-time.github.io/kubezero/
-kubeVersion: ">= 1.18.0"
+    repository: https://cdn.zero-downtime.net/charts
+kubeVersion: ">= 1.20.0"
