Feat: more tweaks for 1.21 upgrade

--- a/containers/admin/v1.21/kubeadm/templates/resources/52-aws-iam-authenticator-mappings.yaml
+++ b/containers/admin/v1.21/kubeadm/templates/resources/52-aws-iam-authenticator-mappings.yaml
@@ -1,5 +1,4 @@
 {{- if .Values.api.awsIamAuth.enabled }}
-# Controller role for consistency, similar to kubeadm admin.conf
 apiVersion: iamauthenticator.k8s.aws/v1alpha1
 kind: IAMIdentityMapping
 metadata:
@@ -8,11 +7,9 @@ spec:
   arn: {{ .Values.api.awsIamAuth.workerNodeRole }}
   username: system:node:{{ "{{" }}EC2PrivateDNSName{{ "}}" }}
   groups:
-  # For now use masters, define properly with 1.20
-  - system:masters
-  - system:nodes
-  - system:bootstrappers
+  - system:bootstrappers:kubeadm:default-node-token
 ---
+
 # Admin Role for remote access
 apiVersion: iamauthenticator.k8s.aws/v1alpha1
 kind: IAMIdentityMapping
